# ImPixelWidgets

./: CMakeLists.txt  ColorRGBA.h  ColorScheme.h  ColorSchemeTurbo.cpp  CoordinateSystem.h  IPixelGrid.h  ImPixel.h  ImPixelAnyGrid.h  ImPixelColorRGBA.h  ImPixelColorScheme.h  ImPixelColorSchemeMono.cpp  ImPixelColorSchemeTurbo.cpp  ImPixelGridData.cpp  ImPixelGridData.h  ImPixelGridDataImage.h  ImPixelImage.cpp  ImPixelImage.h  ImPixelMultiPolarGrid.cpp  ImPixelMultiPolarGrid.h  ImPixelPolarGrid.cpp  ImPixelPolarGrid.h  ImPixelRadarWidget.cpp  ImPixelRadarWidget.h  PixelData.cpp  PixelData.h  PixelGridConfig.h  PixelGridData.cpp  PixelGridData.h  PixelGridDataImage.h  PixelImage.cpp  PixelImage.h  PixelMultiPolarGrid.cpp  PixelMultiPolarGrid.h  PixelPolarGrid.cpp  PixelPolarGrid.h  PolarGrid.cpp  PolarGrid.h  PolarGridConfig.h  README.md  RadarWidget.cpp  (+2 more)
include/: ImPixelColorRGBA.h  ImPixelColorScheme.h  ImPixelCoordinateSystem.h  ImPixelGridConfig.h  ImPixelGridData.h  ImPixelGridDataImage.h  ImPixelImage.h  ImPixelMultiPolarGrid.h  ImPixelPolarGrid.h  ImPixelPolarGridConfig.h  ImPixelRadarWidget.h
src/: ImPixelColorSchemeMono.cpp  ImPixelColorSchemeTurbo.cpp  ImPixelGridData.cpp  ImPixelImage.cpp  ImPixelMultiPolarGrid.cpp  ImPixelPolarGrid.cpp  ImPixelRadarWidget.cpp
